--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 protobuf==3.20.1
 streamlit==1.11.0
 seaborn==0.11.1
-matplotlib==3.4.1
-plotly==4.14.3
+#matplotlib==3.4.1
+#plotly==4.14.3
 
-joblib==0.16.0
+#joblib==0.16.0
